# axiom-runtime

./: .gitignore  README.md  pyproject.toml
.rrt/: events.jsonl
axiom_core/: Cargo.toml  pyproject.toml
axiom_core/src/: analytics.rs  lib.rs  probe.rs  rules.rs  stats.rs  store.rs
axiom_lab/: README.md  __init__.py  analytics.py  calibration.py  campaign.py  corpus.py  probe.py  rules_engine.py
axiom_lab/api_demo/: app.py
axiom_lab/chaos/: app.py
axiom_lab/corpus/: api_corpus.json  chaos_corpus.json  llm_corpus.json
axiom_lab/fixtures/: api_demo_stable.json  llm_demo_stable.json
axiom_lab/llm_demo/: app.py
axiom_lab/reports/: README.txt  medical_expert_report.json  medical_expert_report.md  paypal_expert_report.json  paypal_expert_report.md
axiom_lab/rules/: api_demo.json  llm_demo.json
axiom_lab/shadow/: __init__.py  cli.py  event_store.py  middleware.py  replay_runner.py
examples/: README.md  fastapi_app.py  invariant_rules.json  medical_ai_report.md  medical_ai_rules.json  medical_ai_simulation.py  paypal_report.md  paypal_rules.json  paypal_simulation.py
examples/medical_ai_demo/: README.md  candidate.py  rules.json  stable.py
examples/paypal_demo/: README.md  candidate.py  rules.json  stable.py
src/reliability_runtime/: __init__.py  cli.py  config.py  instrument.py  invariants.py  recorder.py  redaction.py  replayer.py  schema_drift.py  schemas.py  storage.py
src/reliability_runtime.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
tests/: test_axiom_lab.py  test_axiom_lab_calibration.py  test_axiom_lab_shadow.py
