[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-runtime"
version = "1.15.0"
description = "Behavioral integrity layer — probe, regression detection, shadow mode"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115",
    "starlette>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "maturin>=1.4"]

[project.scripts]
rrt = "axiom_lab.shadow.cli:main"
