[package]
name = "axiom_core"
version = "1.15.0"
edition = "2021"
description = "Axiom behavioral-integrity core — high-performance Rust engine"

[lib]
name = "axiom_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
